<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">spudy</string>
    <string name="sp_chat_usuarios">Usuários</string>
    <string name="sp_chat_notas">Notas</string>
    <string name="sp_chat_faltas">Faltas</string>
    <string name="sp_chat_materiais">Materiais</string>
    <string name="sp_chat_nome_turma">NOME DA TURMA</string>
    <string name="sp_frase_digitar_codigo_turma">Digite o código da turma\ninformado pelo professor.</string>

    <string name="sp_registre"><u>Registre-se!</u></string>
    <string name="sp_title_registre">REGISTRE-SE</string>
    <string name="sp_turma_menu_lateral">Turmas</string>
    <string name="sp_meu_perfil_menu_lateral">Meu perfil</string>
    <string name="disciplinas_menu_lateral">Disciplinas</string>
    <string name="sp_sair_menu_lateral">Sair</string>
    <string name="sp_confirm_reg">CONFIRMAR REGISTRO</string>
    <string name="sp_pergunta_vazia">Escolha um tipo de conta</string>
    <string name="sp_usuario_nao_registrado">Não é registrado?</string>
    <string name="sp_btn_alterar_senha">Alterar Senha</string>
    <string name="sp_btn_alterar_instituicao">Alterar Instituição</string>
    <string name="sp_btn_alterar_data_nascimento">Alterar data de nascimento</string>
    <string name="sp_btn_alterar_nome">Alterar Nome</string>
    <string name="sp_btn_adicionar_material">ADICIONAR MATERIAL</string>
    <string name="sp_btn_alterar_material">ALTERAR MATERIAL</string>
    <string name="sp_btn_criar_turma">CRIAR TURMA</string>
    <string name="sp_btn_sair_turma">SAIR DA TURMA</string>
    <string name="sp_btn_salvar">SALVAR</string>
    <string name="sp_btn_ok">OK</string>
    <string name="sp_btn_entrar">ENTRAR</string>
    <string name="sp_btn_enviar">ENVIAR</string>
    <string name="sp_btn_confirmar_alteracao">Confirmar</string>
    <string name="sp_btn_informacao">Clique no campo que deseja alterar.</string>

    <string name="sp_dialogo_sim">Sim</string>
    <string name="sp_dialogo_nao">Não</string>
    <string name="sp_dialogo_titulo">Sair</string>
    <string name="sp_dialogo_titulo_remover">Remover aluno</string>
    <string name="sp_dialogo_mensagem_sair_turma">Tem certeza que deseja sair da turma?</string>
    <string name="sp_dialogo_mensagem_sair_conta">Tem certeza que deseja sair?</string>
    <string name="sp_dialogo_excluir_usuario">Tem certeza que deseja excluir o aluno?</string>

    <string name="sp_tv_informacao_alterar_perfil">Selecione o icone ao lado da opção desejada, para editar.</string>
    <string name="sp_hint_resposta">Resposta</string>
    <string name="sp_hint_nome">Nome completo</string>
    <string name="sp_hint_nascimento">dd/mm/aaaa</string>
    <string name="sp_hint_instituicao">Instituição</string>
    <string name="sp_hint_email">Email</string>
    <string name="sp_hint_nova_senha">Nova senha</string>
    <string name="sp_hint_senha">Senha</string>
    <string name="sp_hint_confirm_senha">Confirme sua senha</string>
    <string name="sp_hint_confirm_nova_senha">Confirmar nova senha</string>
    <string name="sp_hint_digitar_email">Digite seu email</string>
    <string name="sp_hint_nova_data_nascimento">Digite a nova data de nascimento</string>
    <string name="sp_hint_nova_instituicao">Digite nova instituição</string>
    <string name="sp_hint_novo_nome">Digite novo titulo</string>
    <string name="sp_hint_senha_antiga">Digite a senha antiga</string>
    <string name="sp_hint_senha_nova">Digite nova senha</string>
    <string name="sp_hint_nome_do_usuario"><b>Nome do Usuário</b></string>
    <string name="sp_hint_complemento">Complemento</string>
    <string name="sp_hint_endereco">Rua</string>
    <string name="sp_hint_cidade">Cidade</string>
    <string name="sp_hint_titulo_material">Título do Material</string>
    <string name="sp_hint_link_material">Link</string>
    <string name="sp_hint_mensagem_chat">Digite aqui...</string>
    <string name="sp_hint_rua_alterar_perfil">Digite sua rua</string>
    <string name="sp_hint_complemento_alterar_perfil">Digite o complemento</string>
    <string name="sp_hint_cidade_alterar_perfil">Digite sua cidade</string>
    <string name="sp_hint_nome_turma">Nome da Turma</string>
    <string name="sp_hint_titulo_avaliacao">Título da avaliação</string>
    <string name="sp_hint_nota">Nota</string>
    <string name="sp_hint_pesquisa">Pesquisa...</string>

    <string name="sp_title_adicionar_turma"><b>ADICIONAR \n TURMA</b></string>
    <string name="sp_digitar_codigo_turma">Digite o código da turma\ninformado pelo professor</string>
    <string name="sp_hint_codigo_da_turma">Código da Turma</string>
    <string name="sp_adicionar_turma">ADICIONAR TURMA</string>
    <string name="sp_content_alterar">Alterar</string>
    <string name="sp_titulo_materiais">Materiais</string>
    <string name="sp_titulo_usuarios">Usuários</string>

    <string name="sp_recuperar_senha"><b>RECUPERAÇÃO \n DE SENHA</b></string>
    <string name="sp_title_recuperacao_de_senha"><b>Recuperação de Senha</b></string>
    <string name="sp_esqueceuSenha"><u>Não sei minha senha</u></string>

    <string name="sp_conta_criada">CONTA CRIADA\nCOM SUCESSO!</string>
    <string name="sp_alterar_data_nascimento_sucesso">Data de nascimento alterada com sucesso</string>
    <string name="sp_alterar_instituicao_sucesso">Instituição alterada com sucesso</string>
    <string name="sp_login_bem_sucedido">Login efetuado com sucesso</string>
    <string name="sp_usuario_cadastrado">Usuário cadastrado com sucesso</string>
    <string name="sp_email_enviado_sucesso">Email enviado com sucesso</string>
    <string name="sp_nome_alterado_sucesso">Nome alterado com sucesso</string>
    <string name="sp_email_alterado_sucesso">Email alterado com sucesso</string>
    <string name="sp_nota_salva_sucesso">Nota salva com sucesso</string>
    <string name="sp_avaliacao_sucesso">Avaliação realizada com sucesso</string>
    <string name="sp_turma_adicionada_sucesso">Turma adicionada com sucesso</string>
    <string name="sp_usuario_removido_sucesso">Aluno removido com sucesso</string>
    <string name="sp_senha_alterada_sucesso">Senha alterada com sucesso.</string>
    <string name="sp_endereco_alterado_sucesso">Endereço alterado com sucesso</string>
    <string name="sp_presenca_inserida_sucesso">Frequência inserida com sucesso</string>
    <string name="sp_material_cadastrado_sucesso">Material cadastrado com sucesso</string>

    <string name="sp_excecao_tipo_conta">Selecione o tipo de conta</string>
    <string name="sp_excecao_instituicao">Este campo não pode ficar vazio</string>
    <string name="sp_invalido">Campo(s) Usuário ou Senha em branco!</string>
    <string name="sp_campos_email_senha">Preencha os campos de email e senha!</string>
    <string name="sp_excecao_senhas_iguais">Digite senhas iguais</string>
    <string name="sp_conexao_falha">Sem conexão com a Internet</string>
    <string name="sp_excecao_nome_invalido">Nome inválido</string>
    <string name="sp_excecao_campo_vazio">Preencha o campo vazio</string>
    <string name="sp_excecao_senha">Digite uma senha mais forte, contendo no mínimo 6 caracteres</string>
    <string name="sp_excecao_email">Email digitado é inválido</string>
    <string name="sp_excecao_email_cadastrado">Esse email já esta cadastrado no sistema</string>
    <string name="sp_excecao_cadastro">Erro ao efetuar cadastro</string>
    <string name="sp_excecao_data_nascimento">Data de nascimento inválida</string>
    <string name="sp_excecao_nota_aluno">Digite uma nota entre 0 e 10</string>
    <string name="sp_excecao_sair_turma">Erro ao sair da turma. Entre em contato com o suporte.</string>
    <string name="sp_excecao_sair_turma_conexão">Erro ao sair da turma. Verifique sua conexão com a internet.</string>
    <string name="sp_excecao_avaliacao">A nota de avaliação deve ser maior que zero.</string>
    <string name="sp_excecao_database">"Erro ao realizar operação. Verifique sua conexão com a internet ou contate o suporte."</string>
    <string name="sp_excecao_turma">Você já adicionou essa turma</string>
    <string name="sp_excecao_remover_professor">O professor não pode ser removido.</string>
    <string name="sp_excecao_alterar_senha">Senha inválida</string>
    <string name="sp_excecao_professor_sem_turma">Professor não cadastrou nenhuma turma.</string>
    <string name="sp_excecao_professor_avaliar_turma">Professor não pode avaliar a turma.</string>
    <string name="sp_excecao_sem_notas">Nenhuma nota publicada pelo professor.</string>
    <string name="sp_excecao_sem_materiais">Nenhum material publicado pelo professor.</string>
    <string name="sp_excecao_sem_faltas">Nenhuma falta publicada pelo professor.</string>
    <string name="sp_usuario_senha_errados">Usuário ou senha inválido!</string>
    <string name="sp_email_nao_cadastrado">Email não cadastrado</string>
    <string name="sp_usuario_nao_encontrado">Usuario não encontrado</string>
    <string name="sp_em_construcao">Em construção...</string>

    <string name="sp_sair_turma">Se você clicar em sair da turma perderá os dados da mesma.</string>
    <string name="sp_selecionar_professor">"Selecione o professor para exibir as turmas do mesmo."</string>

    <string name="sp_title_activity_main">spudy</string>
    <string name="sp_navigation_drawer_open">Open navigation drawer</string>
    <string name="sp_navigation_drawer_close">Close navigation drawer</string>

    <string name="sp_action_configuracao">Configuracao</string>

    <string name="action_settings">Settings</string>
    <string name="sp_nome_menu_lateral">Android Studio</string>
    <string name="sp_email_menu_lateral">android.studio@android.com</string>
    <string name="sp_btn_confirmar_avaliacao">Confirmar avaliação</string>
    <string name="sp_txt_avalie_turma">Avalie a turma!</string>

</resources>
