<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/azulFundo"
    tools:context=".infraestrutura.gui.ResgatarSenhaActivity" >

        <ImageButton
            android:id="@+id/imbRecDeSenha"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="35dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            app:srcCompat="@drawable/ic_recuperacao_de_senha"
            tools:ignore="ContentDescription,VectorDrawableCompat" />

        <TextView
            android:id="@+id/txtDigiteSeuEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/cinzaClaro"
            android:text="@string/sp_hint_digitar_email" />

        <EditText
            android:id="@+id/edtEmailResgatarSenha"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/border_branco"
            android:drawableLeft="@drawable/ic_email"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:hint="@string/sp_hint_email"
            android:inputType="textWebEmailAddress"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" />

        <Button
            android:id="@+id/btnResgatarSenha"
            android:onClick="enviarEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/border_pink"
            android:text="@string/sp_btn_enviar"
            android:textColor="@color/branco" />

</LinearLayout>

