<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azulFundo">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.example.spudydev.spudy.entidades.material.gui.AlterarMaterialActivity"
        tools:showIn="@layout/activity_adicionar_material">

        <EditText
            android:id="@+id/edtAlterarTituloMaterial"
            android:layout_marginTop="35dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:drawableLeft="@drawable/ic_titulo"
            android:drawableStart="@drawable/ic_titulo"
            android:drawablePadding="10dp"
            android:background="@drawable/border_branco"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/sp_hint_titulo_material"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:inputType="text"/>

        <EditText
            android:id="@+id/edtAlterarLinkMaterial"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:drawableLeft="@drawable/ic_link"
            android:drawableStart="@drawable/ic_link"
            android:drawablePadding="10dp"
            android:layout_height="45dp"
            android:background="@drawable/border_branco"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/sp_hint_link_material"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_below="@id/edtAlterarTituloMaterial" />

        <Button
            android:id="@+id/btnAlterarMaterial"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="35dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/edtAlterarLinkMaterial"
            android:background="@drawable/border_redondo_rosa"
            android:text="@string/sp_btn_alterar_material"
            android:textColor="@color/branco"/>

    </RelativeLayout>
</ScrollView>
