<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cinzaClaro"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.example.spudydev.spudy.entidades.turma.gui.ChatActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/azulFundo"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/tvChatNomeTurma"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/azulFundo"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="25dp"
            android:text="Nome da turma"
            android:textColor="@color/branco"
            android:textSize="25sp"
            android:textAllCaps="true" />

        <View
            android:id="@+id/vwChatNomeTurma"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/rosaSpudy"
            android:layout_marginLeft="25dp"
            android:layout_below="@id/tvChatNomeTurma"/>

        <LinearLayout
            android:id="@+id/rltBotoesChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_below="@id/vwChatNomeTurma"
            android:gravity="center">

            <Button
                android:id="@+id/btnChatUsuario"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:background="@color/azulFundo"
                android:text="@string/sp_chat_usuarios"
                android:textColor="@color/branco"
                android:drawableTop="@drawable/ic_usuarios"
                android:drawableTint="@color/rosaSpudy"/>

            <Button
                android:id="@+id/btnChatFaltas"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:background="@color/azulFundo"
                android:text="@string/sp_chat_faltas"
                android:textColor="@color/branco"
                android:drawableTop="@drawable/ic_faltas"
                android:drawableTint="@color/rosaSpudy"/>

            <Button
                android:id="@+id/btnChatNotas"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:background="@color/azulFundo"
                android:text="@string/sp_chat_notas"
                android:textColor="@color/branco"
                android:drawableTop="@drawable/ic_notas"
                android:drawableTint="@color/rosaSpudy"/>

            <Button
                android:id="@+id/btnChatMateriais"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:background="@color/azulFundo"
                android:text="@string/sp_chat_materiais"
                android:textColor="@color/branco"
                android:drawableTop="@drawable/ic_materiais"
                android:drawableTint="@color/rosaSpudy"/>

        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/rosaSpudy" />

    <RelativeLayout
        android:id="@+id/rltMensagensDoChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ListView
            android:id="@+id/lvMensagens"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="62dp"
            android:background="@color/cinzaClaro" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <EditText
                android:id="@+id/edtChatBarraMensagem"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginEnd="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/border_chat_caixa_de_mensagem"
                android:focusable="false"
                android:hint="@string/sp_hint_mensagem_chat"
                android:inputType="text"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingStart="30dp" />

            <Button
                android:id="@+id/btnChatEnviarMensagem"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/border_redondo_rosa"
                android:drawableLeft="@drawable/ic_send"
                android:drawableTint="@color/cinzaClaro"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:gravity="center_vertical|center_horizontal"/>
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>
